🐛 FIX: adjusted card alignment

--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -7,6 +7,10 @@
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
   border: 1px solid rgba(255, 255, 255, 0.31);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .cardWrapper:hover {
